Fix spacing issue for lessondates search page

--- a/frontend/src/components/LessonDatesIndexItem/LessonDatesIndexItem.css
+++ b/frontend/src/components/LessonDatesIndexItem/LessonDatesIndexItem.css
@@ -31,7 +31,7 @@
 }
 
 .lessonDateIdxItmTimeCol {
-  width: 70px;
+  width: 90px;
   height: 77px;
   margin-right: 12px;
   font-size: .875rem;
